--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -147,22 +147,37 @@
                             <div class="form-group py-3">
                               <label class="form-label">First Name</label>
                               <input type="text" class="form-control" placeholder="Rosy" formControlName="firstname">
-                            </div>
+                              <div *ngIf="contactform.controls['firstname'].invalid && (contactform.controls['firstname'].dirty || contactform.controls['firstname'].touched)"
+                                 class="alert alert-danger"> First name is required.
+                               </div>
+                             </div>
                             <div class="form-group py-3">
                               <label for="exampleFormControlInput2" class="form-label">Last Name</label>
                               <input type="text" class="form-control" formControlName="lastname" placeholder = "Smith">
+                              <div *ngIf="contactform.controls['lastname'].invalid && (contactform.controls['lastname'].dirty || contactform.controls['lastname'].touched)"
+                              class="alert alert-danger"> Last name is required.
+                            </div>
                             </div>
                             <div class="form-group py-3">
                               <label class="form-label">Email</label>
                               <input type="email" class="form-control" formControlName="email"   aria-describedby="emailHelp" placeholder="rosysmith@gmail.com">
+                              <div *ngIf="contactform.controls['email'].invalid && (contactform.controls['email'].dirty || contactform.controls['email'].touched)"
+                              class="alert alert-danger"> Email address is required.
+                            </div>
                             </div>
                             <div class="form-group py-3">
                               <label class="form-label">Mobile Number</label>
                               <input type="text" class="form-control" placeholder="1234567890" formControlName="mobilenumber">
+                              <div *ngIf="contactform.controls['mobilenumber'].invalid && (contactform.controls['mobilenumber'].dirty || contactform.controls['mobilenumber'].touched)"
+                              class="alert alert-danger"> Mobile number is required.
+                            </div>
                             </div>
                             <div class="form-group py-3">
                               <label class="form-label">Message</label>
                               <textarea class="form-control"  name = "textarea" placeholder = "Type your message here!" rows="3" formControlName="message"></textarea>
+                              <div *ngIf="contactform.controls['message'].invalid && (contactform.controls['message'].dirty || contactform.controls['message'].touched)"
+                              class="alert alert-danger"> Message is required.
+                            </div>
                             </div>
                             <div class = "text-center pt-4">
                               <button type="submit" class="btn blue-btn mt-4" id="button-addon2" [disabled]="!contactform.valid">Send a Massage</button>
