--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,6 @@
-
-<!------------Banner Section Starts--------------->
-<section id = "banner-section">
-  <div class = "container">
-    <div class = 'text-center'>
-      <h1 class = "mb-0">We provide Ultimate Patterns & Cosy Rugs</h1>
-      <h6 class = "py-4 mb-0">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy
-        text of the printing and typesetting industry.
-      </h6>
-      <button type = "button" class= "btn black-btn">Find More</button>
-    </div>
-  </div>
-</section>
-<!-----------Banner Section Ends---------->
+<!----------------(Banner Start)------------------>
+<app-slider></app-slider>
+<!----------------(Banner End)------------------>
 <hr class = "section_hr">
 <!-----------Section1 Start---------->
 <section id = "section1">
