--- a/src/app/page/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/page/terms-and-conditions/terms-and-conditions.component.html
@@ -2,7 +2,7 @@
 <section id = "terms_banner">
     <div class = "container">
      <div class = "text-center">
-       <h2>Terms & Conditions</h2>
+       <h1 class = "text-light">Terms & Conditions</h1>
      </div>
     </div>
 </section>
@@ -15,7 +15,7 @@
     </div>
     <div class = "row">
       <div class = "col-md-12">
-        <p [innerHTML]="page.content"></p>
+        <p class = "term_content" [innerHTML]="page.content"></p>
       </div>
     </div>
   </div>
