--- a/src/app/page/privacy-policy/privacy-policy.component.html
+++ b/src/app/page/privacy-policy/privacy-policy.component.html
@@ -2,7 +2,7 @@
 <section id = "privacy_banner">
     <div class = "container">
       <div class = "text-center">
-        <h2>Privacy Policy</h2>
+        <h1 class = "text-light">Privacy Policy</h1>
       </div>
     </div>
   </section>
