--- a/src/app/page/trade-program/trade-program.component.scss
+++ b/src/app/page/trade-program/trade-program.component.scss
@@ -20,6 +20,67 @@ section .blue-btn{
 /*****Main SCSS Start*****/ 
 
 /**********Banner*******/
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+  display:none;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+    animation: fade 10s infinite ease-in-out;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {
+      opacity: .4;
+    } 
+  to {
+      opacity: 1;
+    }
+}
+
 #trade-banner-slider {
 	padding-top: 0px;
 	padding-bottom: 0px;
@@ -56,6 +117,7 @@ section .blue-btn{
 
 	
   }
+ 
 /**********Section1*******/
 #trade-section1{
        .container{
