--- a/src/app/page/visit-us/the-apartment/the-apartment.component.scss
+++ b/src/app/page/visit-us/the-apartment/the-apartment.component.scss
@@ -15,7 +15,7 @@ h2{&:after{content: "";position: relative;display: block;width: 40px;height: 3px
        left: 0;
        right: 0;
        bottom: 0;
-       background-color: rgba(0,0,0,0.5);
+       background-color: #38494d99;
      
 	}
 	.container{
@@ -51,9 +51,7 @@ h2{&:after{content: "";position: relative;display: block;width: 40px;height: 3px
       }
      }   
 }
-
 /******apartment section4******/
-
 #apartment-section3{
 	background:linear-gradient(154deg, #fff 50%, #e7e3dc 0);
 	.col2{
