--- a/src/app/page/visit-us/the-studio/the-studio.component.html
+++ b/src/app/page/visit-us/the-studio/the-studio.component.html
@@ -1,79 +1,6 @@
-<section id = "studio-banner-slider">
- 
-    
- <ngx-slick-carousel class="carousel"
-  #slickModal="slick-carousel"
-  [config]="studioBannerSlideConfig">
- 
-  <div ngxSlickItem  class="slide slider_content">
-    <div class = "box">
-      <div>
-        <img src = "assets/img/visit/studio-banner2.jpg" width="100%">
-        <div class ="overlay">
-        </div>
-      </div>
-      <div class = "container">
-      <div class = "slider_content">
-        <div class = "text-center">
-          <h1 class = "mb-0 text-light text-capitalize">The Studio, Marrakech</h1>
-          <h6 class = " mb-0 text-light">Rug shopping, reimagined. Witness how Moroccan rugs are woven and washed, design your own, and top it all off with an espresso (or rosé) from our Milan-inspired bar.</h6>
-          <button type = "button" class= "btn black-btn" data-bs-toggle="modal" data-bs-target="#requestModal">Request Appointment</button>
-      </div>
-      </div>
-    </div>
-  </div>
-  </div>
-  <div ngxSlickItem  class="slide slider_content">
-    <div class = "box">
-      <div>
-        <img src = "assets/img/visit/studio-banner3.jpg" width="100%">
-         <div class ="overlay">
-        </div>
-      </div>
-      <div class = "container">
-      <div class = "slider_content">
-        <div class = "text-center">
-          <h1 class = "mb-0 text-light text-capitalize">The Studio, Marrakech</h1>
-          <h6 class = " mb-0 text-light">Rug shopping, reimagined. Witness how Moroccan rugs are woven and washed, design your own, and top it all off with an espresso (or rosé) from our Milan-inspired bar.</h6>
-          <button type = "button" class= "btn black-btn" data-bs-toggle="modal" data-bs-target="#requestModal">Request Appointment</button>
-      </div>
-      </div>
-    </div>
-  </div>
-  </div>
-  <div ngxSlickItem  class="slide slider_content">
-    <div class = "box">
-      <div>
-        <img src = "assets/img/visit/studio-banner4.jpg" width="100%">
-        <div class ="overlay">
-        </div>
-      </div>
-      <div class = "container">
-      <div class = "slider_content">
-        <div class = "text-center">
-          <h1 class = "mb-0 text-light text-capitalize">The Studio, Marrakech</h1>
-          <h6 class = " mb-0 text-light">Rug shopping, reimagined. Witness how Moroccan rugs are woven and washed, design your own, and top it all off with an espresso (or rosé) from our Milan-inspired bar.</h6>
-          <button type = "button" class= "btn black-btn" data-bs-toggle="modal" data-bs-target="#requestModal">Request Appointment</button>
-      </div>
-      </div>
-    </div>
-  </div>
-  </div>
-  </ngx-slick-carousel>
 
-</section>
 <!----------------(Banner Start)------------------>
-<!---<section id = "studio-banner">
-    <div class = "container">
-      <div class = "text-center">
-        <h1 class = "mb-0 text-light text-capitalize">The Studio, Marrakech</h1>
-        <h6 class = " mb-0 text-light">Rug shopping, reimagined. Witness how Moroccan rugs are woven and washed, design your own, and top it all off with an espresso (or rosé) from our Milan-inspired bar.</h6>
-        <button type = "button" class= "btn black-btn" data-bs-toggle="modal" data-bs-target="#requestModal">Request Appointment</button>
-    </div>
-    </div>
-</section>  -->
-
-
+<app-slider></app-slider>
 <!----------------(Banner End)------------------>
 
 <!----------------(studio-section1 Start)---------------->
@@ -324,7 +251,7 @@
      <div class = "row">
      <div class = "col-lg-6 col-12">
         <div class = "visit-img1">
-            <img src = "{{page.nycimage}}" width="100%">
+            <img src = "{{page.nycimage}}" width="100%" alt = "img">
         </div>
     </div>
     <div class = "col-lg-6 col-12 ">
@@ -373,39 +300,51 @@
               </div>
           </div>
           <div class = "request_form mt-3">
-              <form>
+              <form [formGroup]="requestForm">
                   <div class = "row">
                       <div class = "col-6 pt-3">
                           <div class = "form-group">
                               <label for="exampleFormControlInput1" class="form-label">First Name</label>
-                              <input type="text" class="form-control" placeholder="John" name = "firstname"  id="exampleFormControlInput1" >
-                             
+                              <input type="text" class="form-control" placeholder="John" name = "firstname" formControlName = "firstname">
+                              <div *ngIf="requestForm.controls['firstname'].invalid && (requestForm.controls['firstname'].dirty || requestForm.controls['firstname'].touched)"
+                            class="alert alert-danger"> First name is required.
+                          </div>
                             </div>
                       </div>
                       <div class = "col-6 pt-3">
                           <div class = "form-group">
                               <label class="form-label">Last Name</label>
-                              <input type="text" class="form-control" placeholder="doe" name = "lastname">
-                              
+                              <input type="text" class="form-control" placeholder="doe" name = "lastname"  formControlName = "lastname">
+                              <div *ngIf="requestForm.controls['lastname'].invalid && (requestForm.controls['lastname'].dirty || requestForm.controls['lastname'].touched)"
+                              class="alert alert-danger"> Last name is required.
+                            </div>
                             </div>
                       </div>
                       <div class = "col-6 pt-3">
                           <div class = "form-group">
                               <label class="form-label">Email</label>
-                             <input type="email" class="form-control" name = "email"   aria-describedby="emailHelp" placeholder="lorem123@gmail.com">
-                            
+                             <input type="email" class="form-control" name = "email"   aria-describedby="emailHelp" placeholder="lorem123@gmail.com"  formControlName = "email">
+                             <div *ngIf="requestForm.controls['email'].invalid && (requestForm.controls['email'].dirty || requestForm.controls['email'].touched)"
+                             class="alert alert-danger"> Email address is required.
+                           </div>
                           </div>
                       </div>
                       <div class = "col-6 pt-3">
                           <div class = "form-group">
                               <label class="form-label">Mobile</label>
-                              <input type="text" class="form-control" placeholder="1234567890" name = "firstname"  >
+                              <input type="text" class="form-control" placeholder="1234567890" name = "firstname" formControlName = "mobilenumber" >
+                              <div *ngIf="requestForm.controls['mobilenumber'].invalid && (requestForm.controls['mobilenumber'].dirty || requestForm.controls['mobilenumber'].touched)"
+                              class="alert alert-danger"> Mobile number is required.
+                            </div>
                           </div>
                       </div>
                       <div class = "col-12 pt-3">
                           <div class="form-group">
                               <label class="form-label">Comments</label>
-                              <textarea class="form-control"  name = "textarea" placeholder = "Type your message here!" rows="3" ></textarea>
+                              <textarea class="form-control"  name = "textarea" placeholder = "Type your message here!" rows="3"  formControlName ="message"></textarea>
+                              <div *ngIf="requestForm.controls['message'].invalid && (requestForm.controls['message'].dirty || requestForm.controls['message'].touched)"
+                              class="alert alert-danger"> Message is required.
+                            </div>
                             </div>
                       </div>
 
